B-F Sandbox Full-Backup/src/objects/Outlet_Class__c.object
<CustomObject>
    <fields>
        <fullName>Market__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Infowelders (DMS)</description>
        <label>Market</label>
        <referenceTo>Market__c</referenceTo>
        <relationshipLabel>Outlet Classes</relationshipLabel>
        <relationshipName>Outlet_Classes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Monthly_Visit_Goal__c</fullName>
        <description>Infowelders (DMS)</description>
        <label>Monthly Visit Goal</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Outlet_Class_Description__c</fullName>
        <description>Outlet Class Description</description>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <label>Outlet Class</label>
    <listViews>
        <fullName>India_Outlet_Class</fullName>
        <columns>NAME</columns>
        <columns>Monthly_Visit_Goal__c</columns>
        <columns>Market__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Market__c</field>
            <operation>equals</operation>
            <value>India</value>
        </filters>
        <label>India - Outlet Class</label>
        <language>en_US</language>
        <sharedTo>
            <role>Global Administrator</role>
            <role>INR-Brand Manager</role>
            <role>INR-Finance Manager</role>
            <role>INR-Market Manager/Admin</role>
            <role>INR-Sales Manager</role>
            <role>INR-Sales Rep</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Japan_Class</fullName>
        <columns>Market__c</columns>
        <columns>NAME</columns>
        <columns>Monthly_Visit_Goal__c</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Market__c</field>
            <operation>equals</operation>
            <value>Japan</value>
        </filters>
        <label>Japan Class</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Kor_Outlet_class</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Market__c</field>
            <operation>equals</operation>
            <value>korea</value>
        </filters>
        <label>Kor Outlet class</label>
        <language>ko</language>
    </listViews>
    <listViews>
        <fullName>Thailand</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>Thailand</label>
        <language>en_US</language>
        <sharedTo>
            <role>Global Administrator</role>
            <role>THI-Finance Manager</role>
            <role>THI-Market Manager/Admin</role>
            <role>THI-Sales Manager</role>
            <role>THI-Sales Rep</role>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Outlet Class Name</label>
        <type>Text</type>
    </nameField>
    <namedFilters>
        <fullName>Account_00N30000005PvL2EAK</fullName>
        <active>true</active>
        <errorMessage>You may only select Class values for your market.</errorMessage>
        <field>Account.Outlet_Class__c</field>
        <filterItems>
            <field>$Source.Market__c</field>
            <operation>equals</operation>
            <valueField>Outlet_Class__c.Market__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
        <name>Account_Outlet Class</name>
        <sourceObject>Account</sourceObject>
    </namedFilters>
    <namedFilters>
        <fullName>nf_01I300000017yEWEAY_00N30000005PvLIEA0</fullName>
        <active>true</active>
        <errorMessage>You may only associate Key Task Templates to Classes in the same market.</errorMessage>
        <field>Key_Task_Template__c.Outlet_Class__c</field>
        <filterItems>
            <field>$Source.Market__c</field>
            <operation>equals</operation>
            <valueField>Outlet_Class__c.Market__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
        <name>Key Task Template_Outlet Class</name>
        <sourceObject>Key_Task_Template__c</sourceObject>
    </namedFilters>
    <pluralLabel>Outlet Classes</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>